abstract class SearchAlgorithm {
    abstract SearchResult search(KwicIndex kwicIndex, String query);
}
