public class SearchIndex {
    public static void main(String[] args) {}
}
