abstract class Shifter {
    abstract void shift(KwicIndex kwicIndex);
}
