abstract class Sorter {
    abstract void sort(KwicIndex kwicIndex);
}
