@startuml SE 311 - Assignment 1

' Styles
skinparam classAttributeIconSize 0

' Title
title
  SE 311: Assignment 1
  UML Class Diagram for KWIC Index System
  Aidan Holland (adh346)
end title

abstract class Input {
  +{abstract} String read()
}

class ConsoleInput extends Input {
  +String read()
}

class FileInput extends Input {
  -File file
  +FileInput(String filename)
  +String read()
}
FileInput "1" o-- "1" java.io.File

abstract class Output {
  +{abstract} void write(String text)
}

class ConsoleOutput extends Output {
  +void write(String text)
}

class FileOutput extends Output {
  -File file
  +FileOutput(String filename)
  +void write(String text)
}
FileOutput "1" o-- "1" java.io.File

class KwicIndex {
  -List<String> sentences
  -List<String> stopWords
  +KwicIndex()
  +void addSentence(String sentence)
  +void addSentences(List<String> sentences)
  +List<String> getSentences()
  +void addStopWord(String stopWord)
  +void addStopWords(List<String> stopWords)
  +List<String> getStopWords()
  +void save(String filename)
  +{static} void load(String filename)
}

class SearchResult {
  -String searchKeyword
  -List<String> sentences
  +SearchResult(String searchKeyword, List<String> sentences)
  +String getSearchKeyword()
  +List<String> getSentences()
  +String toString(Boolean highlight)
  +String toString()
  +void print(Boolean highlight)
  +void print()
}
SearchResult --> ConsoleOutput

abstract class SearchAlgorithm {
  +{abstract} SearchResult search(KwicIndex kwicIndex, String keyword)
}
SearchAlgorithm --> SearchResult
SearchAlgorithm --> KwicIndex

class ExactSearch extends SearchAlgorithm {
  +SearchResult search(KwicIndex kwicIndex, String keyword)
}

abstract class Shifter {
  +{abstract} void shift(KwicIndex kwicIndex)
}

class CircularShifter extends Shifter {
  +void shift(KwicIndex kwicIndex)
}
CircularShifter --> KwicIndex

abstract class Sorter {
  +{abstract} void sort(KwicIndex kwicIndex)
}

class Alphabetizer extends Sorter {
  +void sort(KwicIndex kwicIndex)
}
Alphabetizer --> KwicIndex

class Settings {
  -String inputType
  -String inputFilename
  -String outputType
  -String outputFilename
  -String stopWordsFilename
  +Settings(String propertiesFilename, String defaultPropertiesFilename)
  +Settings(String propertiesFilename)
  +String getInputType()
  +String getInputFilename()
  +String getOutputType()
  +String getOutputFilename()
  +Boolean hasStopWords()
  +String getStopWordsFilename()
}
Settings --> java.util.Properties
Settings --> java.io.File

' CLI Classes
class CreateIndex {
  +{static} void main(String[] args)
}
CreateIndex --> Settings
CreateIndex --> KwicIndex
CreateIndex --> Input
CreateIndex --> Shifter
CreateIndex --> Sorter
CreateIndex --> Output

class SearchIndex {
  +{static} void main(String[] args)
}
SearchIndex --> Settings
SearchIndex --> KwicIndex
SearchIndex --> Input
SearchIndex --> Output

@enduml